test/files/neg/t3692-new.check
t3692-new.scala:14: warning: non-variable type argument Int in type pattern scala.collection.immutable.Map[Int,Int] (the underlying of Map[Int,Int]) is unchecked since it is eliminated by erasure
      case m0: Map[Int, Int] => new java.util.HashMap[Integer, Integer]
               ^
t3692-new.scala:15: warning: non-variable type argument Int in type pattern scala.collection.immutable.Map[Int,V] (the underlying of Map[Int,V]) is unchecked since it is eliminated by erasure
      case m1: Map[Int, V] => new java.util.HashMap[Integer, V]
               ^
t3692-new.scala:16: warning: non-variable type argument Int in type pattern scala.collection.immutable.Map[T,Int] (the underlying of Map[T,Int]) is unchecked since it is eliminated by erasure
      case m2: Map[T, Int] => new java.util.HashMap[T, Integer]
               ^
t3692-new.scala:15: warning: unreachable code
      case m1: Map[Int, V] => new java.util.HashMap[Integer, V]
                              ^
t3692-new.scala:4: warning: Tester has a main method with parameter type Array[String], but Tester will not be a runnable program.
  Reason: main method must have exact signature (Array[String])Unit
object Tester {
       ^
error: No warnings can be incurred under -Xfatal-warnings.
5 warnings found
one error found
